; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_test_tr_modify.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_test_tr_modify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"deleteCell failed: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"td2\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"insertCell failed: %08x\0A\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"disp == NULL\0A\00", align 1
@IID_IHTMLTableCell = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [50 x i8] c"Could not get IID_IHTMLTableCell interface: %08x\0A\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"cell == NULL\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @test_tr_modify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_tr_modify(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @IHTMLTableRow_deleteCell(i32* %8, i32 0)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @S_OK, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = load i64, i64* %5, align 8
  %15 = call i32 (i32, i8*, ...) @ok(i32 %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i64 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @test_tr_possess(i32* %16, i32* %17, i32 1, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %19 = load i32*, i32** %4, align 8
  %20 = call i64 @IHTMLTableRow_insertCell(i32* %19, i32 0, i32** %6)
  store i64 %20, i64* %5, align 8
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @S_OK, align 8
  %23 = icmp eq i64 %21, %22
  %24 = zext i1 %23 to i32
  %25 = load i64, i64* %5, align 8
  %26 = call i32 (i32, i8*, ...) @ok(i32 %24, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i64 %25)
  %27 = load i32*, i32** %6, align 8
  %28 = icmp ne i32* %27, null
  %29 = zext i1 %28 to i32
  %30 = call i32 (i32, i8*, ...) @ok(i32 %29, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %31 = load i32*, i32** %6, align 8
  %32 = bitcast i32** %7 to i8**
  %33 = call i64 @IDispatch_QueryInterface(i32* %31, i32* @IID_IHTMLTableCell, i8** %32)
  store i64 %33, i64* %5, align 8
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* @S_OK, align 8
  %36 = icmp eq i64 %34, %35
  %37 = zext i1 %36 to i32
  %38 = load i64, i64* %5, align 8
  %39 = call i32 (i32, i8*, ...) @ok(i32 %37, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.4, i64 0, i64 0), i64 %38)
  %40 = load i32*, i32** %7, align 8
  %41 = icmp ne i32* %40, null
  %42 = zext i1 %41 to i32
  %43 = call i32 (i32, i8*, ...) @ok(i32 %42, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  %44 = load i64, i64* %5, align 8
  %45 = call i64 @SUCCEEDED(i64 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %2
  %48 = load i32*, i32** %7, align 8
  %49 = call i32 @IHTMLTableCell_Release(i32* %48)
  br label %50

50:                                               ; preds = %47, %2
  %51 = load i32*, i32** %3, align 8
  %52 = load i32*, i32** %4, align 8
  %53 = call i32 @test_tr_possess(i32* %51, i32* %52, i32 2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %54 = load i32*, i32** %6, align 8
  %55 = call i32 @IDispatch_Release(i32* %54)
  ret void
}

declare dso_local i64 @IHTMLTableRow_deleteCell(i32*, i32) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i32 @test_tr_possess(i32*, i32*, i32, i8*) #1

declare dso_local i64 @IHTMLTableRow_insertCell(i32*, i32, i32**) #1

declare dso_local i64 @IDispatch_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i64 @SUCCEEDED(i64) #1

declare dso_local i32 @IHTMLTableCell_Release(i32*) #1

declare dso_local i32 @IDispatch_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
